<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/nav_acc"
            android:icon="@drawable/ic_account"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/information"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
            <item android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send"/>
        </menu>
    </item>
</menu>