<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/register_here"
            android:textColor="#CC000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/conPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@+id/conPassword" />

        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/change_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
            app:layout_constraintVertical_bias="0.120000005">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login_now"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>