<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_name"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_description"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/tvMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/product_minute"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/design_default_color_primary"
                    android:onClick="pickImage"
                    android:scaleType="centerCrop"
                    android:text="Pick Image"
                    android:textColor="#fff"
                    app:srcCompat="@drawable/image" />

                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/design_default_color_primary"
                    android:onClick="uploadRecipe"
                    android:text="@string/upload_recipe"
                    android:textColor="#fff" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>